--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,12 @@
             <version>2.8.7</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.22</version>
+            <scope>provided</scope>
+        </dependency>
     </dependencies>
 
 </project>
